--- a/.github/workflows/keep-alive.yml
+++ b/.github/workflows/keep-alive.yml
@@ -1,13 +1,19 @@
+# This is a name for your workflow, which you will see in the Actions tab
 name: Keep Render Service Alive
 
+# This section defines when the workflow runs
 on:
   schedule:
-    # Runs every 5 minutes
-    - cron: '*/5 * * * *'
+    # UPDATED: Runs every minute
+    - cron: '* * * * *'
+  
+  # This line allows you to run the workflow manually from the Actions tab
+  workflow_dispatch:
 
+# This section defines the actual jobs that will run
 jobs:
   ping:
     runs-on: ubuntu-latest
     steps:
-      - name: Ping the website
-        run: curl -s "https://brieflyai.in/" > /dev/null
+      - name: Ping the website to keep it alive
+        run: curl --fail -s "https://brieflyai.in/" > /dev/null
